# ai-Assignment-

./: app.py  models.py  pyproject.toml  replit.nix
instance/: assignments.db
static/css/: custom.css
static/js/: analysis.js  camera.js
templates/: analyze.html  assignment_detail.html  assignments.html  index.html  layout.html  reference.html  results.html
utils/: analyzer.py  ocr.py
